-Updates for Azure spring-ai projects.